fixed bg and overflows

--- a/style.css
+++ b/style.css
@@ -53,3 +53,7 @@
   left: 100px;
   bottom: 10px;
 }
+
+.infoPages {
+  background-color: lightskyblue;
+}
